# PaperPilot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: paperpilot_改进记录.md
src/agent/: graph.py  planner.py  researcher.py  reviewer.py  state.py  synthesizer.py  writer.py
src/backend/: app.py  routes.py  schemas.py  websocket_handler.py
src/frontend/: index.html
src/llm/: client.py
src/memory/: long_term.py  sessions.py  short_term.py  summary.py
src/rag/: chunker.py  embeddings.py  parser.py  retriever.py  vectorstore.py
src/report/: citations.py  generator.py
src/tools/: arxiv_tool.py  github_tool.py  jina_reader.py  web_search_tool.py
src/tools/mcp_server/: server.py
src/utils/: config.py  logging.py
