[project]
name = "paperpilot"
version = "0.1.0"
description = "AI Research Assistant — Multi-Agent research orchestration with LangGraph, MCP, and RAG"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "arxiv>=2.1",
    "PyGithub>=2.3",
    "mcp>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
